Add objects to the container right after creation